--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "@j127/async_js_exercise",
+    "name": "@j127/async_js_exercises",
     "version": "1.0.0",
     "description": "TODO: edit this file.",
     "main": "script1.js",
